src/test/resources/org/xmlcml/www/convention/molecular/invalid/scalar-must-have-units-and-datatype-1.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml:molecule xmlns:cml="http://www.xml-cml.org/schema"
         xmlns:dc="http://purl.org/dc/elements/1.1/"
         xmlns:conventions="http://www.xml-cml.org/convention/" convention="conventions:molecular"
        xmlns:cmlDictionary="http://www.xml-cml.org/dictionary/"
        id="m1">
    <dc:title>test file for http://www.xml-cml.org/convention/molecular convention</dc:title>
    <dc:description>scalar must be child of property, have units and dataType specified</dc:description>
    <dc:author>J A Townsend</dc:author>
    <dc:rights>Copyright J A Townsend jat45@cantab.net 2009.</dc:rights>
    <dc:date>2009-01-21</dc:date>
    <cml:property dictRef="cmlDictionary:dummy" title="a dummy scalar for testing">
        <cml:scalar>a dummy scalar</cml:scalar>
    </cml:property>
</cml:molecule>